2022-04-20 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCast.c,
	  src/SDCCcse.c,
	  src/SDCCglue.c,
	  src/SDCCicode.c,
	  src/SDCClospre.hpp,
	  src/SDCCopt.c,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h,
	  src/ds390/ralloc.c,
	  src/mcs51/ralloc.c,
	  src/pic14/glue.c,
	  src/pic14/ralloc.c,
	  src/pic16/glue.c,
	  src/pic16/ralloc.c,
	  support/regression/tests/bug-3254.c:
	  Fix bug #3254.

2022-04-20 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCglue.c,
	  support/valdiag/tests/generic.c:
	  Fix another part of bug #3145.

2022-04-19 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCast.c:
	  Fix array-to-pointer decay in _Generic.

2022-04-15 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCsymt.c,
	  support/regression/tests/bug-2629.c:
	  Fix bug #2629.

2022-04-15 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCsymt.c:
	  Assertion to catch bug #2629 earlier.
	* support/regression/tests/bug-2629.c:
	  (Disabled) test for bug #2629.

2022-04-15 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCsymt.c:
	  Fix printing of plain char for error messages and debug output.

2022-04-13 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* doc/sdccman.lyx:
	  Update documentation on standard compliance.

2022-04-11 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/stm8/gen.c,
	  support/regression/tests/bug-3379.c:
	  Fix bug #3379.

2022-04-10 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/bug-2981.c:
	  Test for bug #2981.
	* src/SDCCast.c,
	  support/regression/tests/bug-3255.c:
	  Fix bug #3255.
	* src/SDCCglue.c,
	  support/valdiag/tests/generic.c:
	  Fix part of bug #3145.

2022-04-03 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/Makefile.in,
	  support/regression/ports/mcs51-small-stack-auto: